--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,25 @@
-span {
-   font-size: 150%; 
+body {
+    background: black;
 }
 
+h1 {
+    color: #5E0D8B;
+    font-weight: bolder;
+    text-align: center;
+}
+
+.lead {
+    color:  #5E0D8B;
+}
+
+.jumbotron {
+    background-color: #BB80D1;
+}
+
+.card {
+    margin-bottom: 30px;
+    background-color: #5E0D8B;
+}
 .card-body {
     display: inline-block; 
     flex-direction: column; 
@@ -11,22 +29,40 @@ span {
     margin: 0 auto;
 } 
 
-d-inline-flex { 
-    display: inline-block; 
-    flex-direction: column; 
+.d-flex {
+    margin-right: 30px;
+    margin-left: 30 px;
+}
+
+#spanDiv {
+    display: inline-block;
     justify-content: center;
-    vertical-align: top;
+    vertical-align: top; 
     clear: both;
-    margin: 0 auto;
-    background-color: blue;
+    margin-right: 30px;
+    margin-left: 30 px;
+}
 
+span {
+    font-size: 150%; 
+    color: #BB80D1;
+}
 
+#crystalsCard {
+    background-color: black;
+    clear: both;
+}
+
+#containCrystals {
+    margin-left: 30px;
+    display: inline-block;
+    justify-content: center;
 }
 
 img {
     display: inline-block;
-    width: 20%;
+    width: 22%;
     height: auto; 
     margin: 0 auto;
-    vertical-align: top;
   }   
+
